--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,26 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          <version>4.12</version>
         <scope>test</scope>
  </dependency>
-
   <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>9.1-901-1.jdbc4</version>
+      <version>42.2.5</version>
   </dependency>
+     <dependency>
+         <groupId>oauth.signpost</groupId>
+         <artifactId>signpost-core</artifactId>
+         <version>1.2.1.2</version>
+     </dependency>
+     <dependency>
+         <groupId>oauth.signpost</groupId>
+         <artifactId>signpost-commonshttp4</artifactId>
+         <version>1.2.1.2</version>
+     </dependency>
+     <dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-databind</artifactId>
+         <version>2.9.4</version>
+     </dependency>
 
 
  </dependencies>
